Fixes footer align

--- a/src/Components/Footer/styles.css
+++ b/src/Components/Footer/styles.css
@@ -10,8 +10,7 @@
 
 .links {
     padding-top: 7.5%;
-    text-align: center;
-    margin-left: 20% !important;
+    text-align: right;
 }
 
 .link {
@@ -30,7 +29,7 @@ a {
 
 @media screen and (max-width: 767px) {
     .rights {
-        margin-left: 30px !important;
+        margin-left: 15% !important;
     }
     .signUp {
         margin: 0 !important;
